# kindle-weather-dashboard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  assets_list.csv  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: aqsdw6z3nrj80ys502r4p33099202a06-source  plaqs6yvw5v0jr1y1sv981lg61lv1rra-source  xw1qykw8x6rfcavdkvgwjxgg8gci78ha-source
.github/workflows/: ci.yml
src/: main.rs  render.rs  wanikani.rs
templates/: dashboard.typ  index.html  render.html  wanikani.typ  weather.typ  widget.typ
templates/widgets/: weather.html
