[package]
name = "kindle-weather-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
askama = "0.15"
askama_web = { version = "0.15.0", features = ["axum-0.8"] }
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
image = "0.25"
once_cell = "1.19"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rust-embed = "8.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["fs"] }
typst = "0.14.2"
typst-render = "0.14.2"
